--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "now-ui-react-native",
+  "name": "now-ui-react-native2",
   "version": "1.5.0",
   "description": "Now UI React Native, based on Now UI Design System. Coded by Creative Tim",
   "main": "node_modules/expo/AppEntry.js",
