--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "15.7.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendars": "^1.1299.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "~2.14.4",
