--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/stack": "6.2.1",
+    "date-fns": "^2.30.0",
     "expo": "^48.0.0",
     "expo-app-loading": "2.0.0",
     "expo-asset": "~8.9.1",
@@ -30,6 +31,7 @@
     "prop-types": "15.7.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-button-toggle-group": "^1.1.2",
     "react-native-calendars": "^1.1299.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-dropdown": "^1.0.2",
