--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/stack": "6.2.1",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo": "^48.0.0",
     "expo-app-loading": "2.0.0",
