--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/creativetimofficial/now-ui-react-native.git"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/compat": "5.1.25",
