--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-calendars": "^1.1299.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
