--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react-native": "0.71.8",
     "react-native-button-toggle-group": "^1.1.2",
     "react-native-calendars": "^1.1299.0",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
