--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/stack": "6.2.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo": "^48.0.0",
