--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-multiple-select": "^0.5.12",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
