--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-calendars": "^1.1299.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-multiple-select": "^0.5.12",
