--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.8",
+    "expo-contacts": "~12.2.0",
     "expo-status-bar": "~1.6.0",
     "galio-framework": "^0.8.0",
     "qs": "^6.11.2",
