--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.8",
     "expo-contacts": "~12.2.0",
+    "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
     "galio-framework": "^0.8.0",
     "qs": "^6.11.2",
@@ -34,7 +35,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-bottom-list": "^1.0.7",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-view-shot": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
