--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meupetrecho",
   "description": "Meu Petrecho - app",
-  "version": "1.26.0",
+  "version": "1.27.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -24,6 +24,7 @@
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
     "expo-device": "~5.4.0",
+    "expo-modules-autolinking": "^1.5.1",
     "expo-notifications": "~0.20.1",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
