--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "meupetrecho",
+    "name": "Meu Petrecho",
     "slug": "test",
-    "version": "1.32.0",
+    "version": "1.33.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -21,7 +21,7 @@
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#47141e"
       },
-      "versionCode": 32,
+      "versionCode": 33,
       "package": "com.mpaice.meupetrechoapp",
       "googleServicesFile": "./google-services.json"
     },
