--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-calendars": "^1.1301.0",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
