--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "expo": "~49.0.8",
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
+    "expo-dev-client": "~2.4.12",
     "expo-device": "~5.4.0",
-    "expo-modules-autolinking": "^1.5.1",
     "expo-notifications": "~0.20.1",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
     "galio-framework": "^0.8.0",
     "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-calendars": "^1.1301.0",
     "react-native-element-dropdown": "^2.10.0",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-popup-menu": "^0.16.1",
@@ -43,7 +43,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-select-bottom-list": "^1.0.7",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-view-shot": "^3.7.0"
+    "react-native-view-shot": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
