--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/compat": "^5.3.20",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
