--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.8",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
     "expo-dev-client": "~2.4.12",
