--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@types/react": "~18.2.14",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.8",
@@ -25,6 +26,7 @@
     "expo-contacts": "~12.2.0",
     "expo-dev-client": "~2.4.12",
     "expo-device": "~5.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-notifications": "~0.20.1",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
@@ -43,7 +45,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-select-bottom-list": "^1.0.7",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-view-shot": "3.7.0"
+    "react-native-view-shot": "3.7.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
