--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "meupetrecho",
   "description": "Meu Petrecho - app",
   "version": "1.0.53",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -33,7 +32,7 @@
     "galio-framework": "^0.8.0",
     "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-calendars": "^1.1301.0",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
@@ -46,7 +45,8 @@
     "react-native-select-bottom-list": "^1.0.7",
     "react-native-vector-icons": "^10.0.0",
     "react-native-view-shot": "3.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
