--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
-    "expo-dev-client": "~2.4.12",
+    "expo-dev-client": "~2.4.13",
     "expo-device": "~5.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-notifications": "~0.20.1",
     "expo-sharing": "~11.5.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "galio-framework": "^0.8.0",
     "qs": "^6.11.2",
@@ -45,8 +46,7 @@
     "react-native-select-bottom-list": "^1.0.7",
     "react-native-vector-icons": "^10.0.0",
     "react-native-view-shot": "3.7.0",
-    "typescript": "^5.1.3",
-    "expo-splash-screen": "~0.20.5"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
